--- a/DataMining-Actions/00-feature-engeneering.ipynb
+++ b/DataMining-Actions/00-feature-engeneering.ipynb
@@ -10,12 +10,11 @@
      "output_type": "stream",
      "text": [
       "package版本信息：\n",
-      "numpy:       1.22.3\n",
-      "pandas:      1.4.2\n",
-      "matplotlib:  3.5.1\n",
-      "sklearn:     1.0.2\n",
-      "seaborn:     0.11.2\n",
-      "plotly:      5.8.2\n"
+      "numpy:       1.23.3\n",
+      "pandas:      1.4.4\n",
+      "matplotlib:  3.5.3\n",
+      "sklearn:     1.1.2\n",
+      "seaborn:     0.12.1\n"
      ]
     }
    ],
@@ -24,12 +23,12 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import plotly.express as px\n",
-    "from plotly import graph_objects as go\n",
+    "# import plotly.express as px\n",
+    "# from plotly import graph_objects as go\n",
     "\n",
     "import matplotlib\n",
-    "import plotly\n",
     "import sklearn\n",
+    "# import plotly\n",
     "\n",
     "print(\"package版本信息：\")\n",
     "print(\"numpy:      \", np.__version__)\n",
@@ -37,7 +36,7 @@
     "print(\"matplotlib: \", matplotlib.__version__)\n",
     "print(\"sklearn:    \", sklearn.__version__)\n",
     "print(\"seaborn:    \", sns.__version__)\n",
-    "print(\"plotly:     \", plotly.__version__)"
+    "# print(\"plotly:     \", plotly.__version__)"
    ]
   },
   {
@@ -664,7 +663,7 @@
     "    \n",
     "\n",
     "一般来说，使用pandas进行填充比较方便，不过如果要使用均值等统计量来填充，使用sklearn更为方便。  \n",
-    "特别要注意的是，**sklearn中的策略是对所有特征一起使用的，如果传入的数据里字符型和数值型特征混用，会报错**。\n",
+    "特别要注意的是，<font color='red'>sklearn中的策略是对所有特征一起使用的，如果传入的数据里字符型和数值型特征混用，会报错</font>。\n",
     "\n",
     "所以，**推荐使用pandas进行缺失值处理**。"
    ]
@@ -1743,7 +1742,9 @@
     "#### OridinalEncoder()\n",
     "\n",
     "分类特征是**有序的**，需要编码成有序数值  \n",
-    "`preprocessing.OrdinalEncoder(categories='auto', dtype=<class 'numpy.float64'>, handle_unknown='error', unknown_value=None)`   \n",
+    "```python\n",
+    "preprocessing.OrdinalEncoder(categories='auto', dtype=<class 'numpy.float64'>, handle_unknown='error', unknown_value=None)\n",
+    "```\n",
     "\n",
     "参数：\n",
     "  + categories: 指定类别，有如下两个选择\n",
@@ -1859,7 +1860,9 @@
     "#### OneHotEncoder()\n",
     "\n",
     "分类特征仅仅用于区分，没有顺序关系，也就是名义变量，使用 One-Hot 编码  \n",
-    "`preprocessing.OneHotEncoder(categories='auto', drop=None, sparse=True, dtype=<class 'numpy.float64'>, handle_unknown='error')`  \n",
+    "```python\n",
+    "preprocessing.OneHotEncoder(categories='auto', drop=None, sparse=True, dtype=<class 'numpy.float64'>, handle_unknown='error')\n",
+    "```\n",
     "\n",
     "参数：\n",
     "  + categories: 指定类别，有如下两个选择\n",
@@ -2045,8 +2048,11 @@
     "\n",
     "### 二值化\n",
     "根据某个阈值，将连续特征转换为0或1。\n",
-    "+ `preprocessing.Binarizer(threshold=0.0, copy=True)`  \n",
-    "  + 这个类的`.fit()`方法没啥用，只是用于兼容，不会做任何操作"
+    "```python\n",
+    "preprocessing.Binarizer(threshold=0.0, copy=True)` \n",
+    "```\n",
+    " \n",
+    "> 这个类的`.fit()`方法没啥用，只是用于兼容，不会做任何操作"
    ]
   },
   {
@@ -2094,17 +2100,19 @@
    "source": [
     "### 分段 \n",
     "将连续型特征分段取值，类似于频率直方图的操作.\n",
-    "+ `preprocessing.KBinsDiscretizer(n_bins=5, encode='onehot', strategy='quantile', dtype=None)`\n",
-    "  + n_bins: 分段数；也可以是一个长度=n_features的list of int，用于指定每个特征的分段数\n",
-    "  + encode: 编码方式，取值如下：\n",
+    "```python\n",
+    "preprocessing.KBinsDiscretizer(n_bins=5, encode='onehot', strategy='quantile', dtype=None)\n",
+    "```\n",
+    "+ n_bins: 分段数；也可以是一个长度=n_features的list of int，用于指定每个特征的分段数\n",
+    "+ encode: 编码方式，取值如下：\n",
     "    + one-hot, 返回one-hot编码的**稀疏矩阵**格式\n",
     "    + onehot-dense, 返回正常one-hot编码格式\n",
     "    + ordinal, 使用分段后的序号表示\n",
-    "  + strategy: 分段的策略，取值如下：\n",
+    "+ strategy: 分段的策略，取值如下：\n",
     "    + uniform, 等距分段\n",
     "    + quantile, 分位数分段，每段中的数据点数一样\n",
     "    + kmeans\n",
-    "  + dtype: 输出的类型，只支持np.float32或者np.float64."
+    "+ dtype: 输出的类型，只支持np.float32或者np.float64."
    ]
   },
   {
@@ -3168,19 +3176,21 @@
     "所以**无论接下来的特征工程要做什么，都要优先消除方差近似于0的特征**.\n",
     "\n",
     "sklearn中提供了如下类来完成此步骤：   \n",
-    "`feature_selection.VarianceThreshold(threshold=0.0)`  \n",
+    "```python\n",
+    "feature_selection.VarianceThreshold(threshold=0.0)` \n",
+    "```\n",
     "\n",
-    "+ 参数\n",
-    "  + threshold:过滤的方差阈值\n",
-    "\n",
-    "\n",
-    "+ 属性\n",
-    "  + variance_: shape=(n_featuers, )，记录了各个特征的方差\n",
-    "  + n_features_in_:\n",
+    "参数\n",
+    "+ threshold:过滤的方差阈值\n",
     "\n",
     "\n",
-    "+ 方法\n",
-    "  + get_support(indices=False)，获取过滤的特征   \n",
+    "属性\n",
+    "+ variance_: shape=(n_featuers, )，记录了各个特征的方差\n",
+    "+ n_features_in_:\n",
+    "\n",
+    "\n",
+    "方法\n",
+    "+ get_support(indices=False)，获取过滤的特征   \n",
     "    + indices=False，返回的就是掩码\n",
     "    + indices=True，返回的就是过滤后的特征索引"
    ]
@@ -3333,16 +3343,21 @@
     "\n",
     "上述三种检验方法都需要结合`feature_selection.SelectKBest()`类使用，该类可以输入”评分标准“来选出前K个分数最高的特征，借此除去最可能独立于标签，与我们分类目的无关的特征.\n",
     "\n",
+    "```python\n",
+    "feature_selection.SelectKBest(score_func=<function f_classif>, *, k=10)\n",
+    "```\n",
+    "这是类，根据传入的`score_func`计算各个特征的指标，然后选择前k个特征。  \n",
     "\n",
-    "`feature_selection.SelectKBest(score_func=<function f_classif>, *, k=10)`——这是类，根据传入的`score_func`计算各个特征的指标，然后选择前k个特征。  \n",
-    "+ 参数：\n",
-    "  + `score_func`，计算特征指标的函数，需要能接受 X, y两个参数，然后计算对应样本的score\n",
-    "  + `k`    \n",
-    "+ 返回值\n",
-    "  + `scores_`, shape=(n_features, )，各个特征的score\n",
-    "  + `pvalues_`, shape=(n_features, )，特征score对应的p值\n",
-    "+ 方法\n",
-    "  + get_support(indices=False)，获取过滤后的特征：indices=False返回掩码，indices=True返回特征的索引\n",
+    "参数：\n",
+    "+ `score_func`，计算特征指标的函数，需要能接受 X, y两个参数，然后计算对应样本的score\n",
+    "+ `k`    \n",
+    "\n",
+    "返回值\n",
+    "+ `scores_`, shape=(n_features, )，各个特征的score\n",
+    "+ `pvalues_`, shape=(n_features, )，特征score对应的p值\n",
+    "\n",
+    "方法\n",
+    "+ get_support(indices=False)，获取过滤后的特征：indices=False返回掩码，indices=True返回特征的索引\n",
     "\n",
     "**下面这三个都是函数，不是类**.  \n",
     "\n",
@@ -3638,7 +3653,9 @@
     "嵌入法是一种让算法自己决定使用哪些特征的方法，即特征选择和算法训练同时进行。  \n",
     "在使用嵌入法时，**先使用某些机器学习的算法和模型进行训练，得到各个特征的权值系数，根据权值系数从大到小选择特征**.\n",
     "\n",
-    "`feature_selection.SelectFromModel(estimator, *, threshold=None, prefit=False, norm_order=1, max_features=None, importance_getter='auto')`\n",
+    "```python\n",
+    "feature_selection.SelectFromModel(estimator, *, threshold=None, prefit=False, norm_order=1, max_features=None, importance_getter='auto')\n",
+    "```\n",
     "\n",
     "+ 参数\n",
     "  + `estimator`，使用的模型评估器，这个估计器必须要有`.feature_importance_`或者`.coef_`属性，用于评估特征.   \n",
@@ -3839,29 +3856,31 @@
     "包装法和嵌入法的区别在于：**嵌入法一次训练即可，包装法要不断的减少特征子集并进行多次训练，所以包装法的计算成本很大**.\n",
     "\n",
     "sklearn中的包装法主要是RFE方法——Recursive Feature Elimination.\n",
-    "+ `feature_selection.RFE(estimator, *, n_features_to_select=None, step=1, verbose=0, importance_getter='auto')`\n",
-    "  + `estimator`，使用的模型评估器，这个估计器必须要有`.feature_importance_`或者`.coef_`属性，用于评估特征\n",
-    "  + `n_features_to_select`，最终留下的特征数量，可以是：\n",
+    "```python\n",
+    "feature_selection.RFE(estimator, *, n_features_to_select=None, step=1, verbose=0, importance_getter='auto')\n",
+    "```\n",
+    "+ `estimator`，使用的模型评估器，这个估计器必须要有`.feature_importance_`或者`.coef_`属性，用于评估特征\n",
+    "+ `n_features_to_select`，最终留下的特征数量，可以是：\n",
     "    + `int`，直接指定留下的特征数\n",
     "    + `float`，$[0, 1]$ 之间，表示留下的特征比例.\n",
-    "  + `step`，每一步中需要消除的特征个数\n",
+    "+ `step`，每一步中需要消除的特征个数\n",
     "    + `int`，直接是特征个数\n",
     "    + `float`，$[0, 1]$ 之间，每一步中消除的特征比例.\n",
-    "  + `importance_getter`\n",
+    "+ `importance_getter`\n",
     "  \n",
-    "+ `RFE`实例对象的属性：\n",
-    "  + `estimator_`\n",
-    "  + `n_features_`\n",
-    "  + `ranking_`\n",
-    "  + `support_`\n",
+    "`RFE`实例对象的属性：\n",
+    "+ `estimator_`\n",
+    "+ `n_features_`\n",
+    "+ `ranking_`\n",
+    "+ `support_`\n",
     "  \n",
-    "+ `RFE`实例对象的方法：\n",
-    "  + `fit`、`transform` 和 `fit_transform` 方法\n",
-    "  + `get_support_(indice=False)`，获取筛选出来的特征\n",
-    "  + `decision_function(X)`，\n",
-    "  + `predict(X)`\n",
-    "  + `predict_proba(X)`\n",
-    "  + `predict_log_proba(X)`"
+    "`RFE`实例对象的方法：\n",
+    "+ `fit`、`transform` 和 `fit_transform` 方法\n",
+    "+ `get_support_(indice=False)`，获取筛选出来的特征\n",
+    "+ `decision_function(X)`，\n",
+    "+ `predict(X)`\n",
+    "+ `predict_proba(X)`\n",
+    "+ `predict_log_proba(X)`"
    ]
   },
   {
@@ -6778,9 +6797,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Data-Analysis",
    "language": "python",
-   "name": "python3"
+   "name": "data-analysis"
   },
   "language_info": {
    "codemirror_mode": {
