--- a/DataMining-Actions/03-ensemble-models.ipynb
+++ b/DataMining-Actions/03-ensemble-models.ipynb
@@ -2436,7 +2436,11 @@
     "+ `stack_method`: 融合策略，可选值为`{‘auto’, ‘predict_proba’, ‘decision_function’, ‘predict’}`\n",
     "    + `auto`下会对每个估计器依次尝试`predict_proba`, `decision_function`, `predict` 方法\n",
     "    + 其他选项则是自己指定使用的估计器方法\n",
-    "+ `passthrough`: 默认`False`，表示只有一级估计器的输出会被输入到元估计器中，`True`表示则会和原始数据一起输入元估计器中。"
+    "+ `passthrough`: 默认`False`，表示只有一级估计器的输出会被输入到元估计器中，`True`表示则会和原始数据一起输入元估计器中。\n",
+    "\n",
+    "这里需要注意的是，Sklearn里实现的Stacking：\n",
+    "+ 在`cv`取值不是`prefit`的情况下，<font color='red'>会**对每个一级学习器**使用传入的**整个数据集**训练一次模型参数（**不是超参数**），然后使用交叉验证的方式得到每个一级学习器的OOB预测（内部调用的是`cross_val_predict()`方法）</font>。这一意味着，<font color='red'>传入的一级学习器所使用的最优超参数需要实现我们自己实现执行一次GridSearch+CV的搜索</font>，但是这个过程会出现数据泄露的情况，导致后续使用Stacking集成时极易出现过拟合的情况。\n",
+    "+  如果`cv='prefit'`，此时不会对一级学习器进行训练，也不会使用交叉验证的方式获取OOB预测，而是直接使用每个一级学习器在传入的数据集上的预测结果。"
    ]
   },
   {
